# maypaper

./: .gitignore  Cargo.toml  Contributing.md  README.md
src/: event.rs  ipc.rs  lib.rs  main.rs  webserver.rs  webview.rs
templates/image/: index.html
templates/parallax/: index.html
templates/video/: index.html
