
[package]
name = "maypaper"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = "0.10.3"
gtk4-layer-shell = "0.7.1"
webkit6 = "0.5"
async-channel = "2.5"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
env = "1.0.1"
anyhow = "1.0.100"
toml = "0.9.10"
console = "0.16.2"
